<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />


        <item
            android:id="@+id/nav_bookings"
            android:icon="@drawable/ic_calender"
            android:title="@string/bookings" />


        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_support"
            android:title="@string/services" />

        <item
            android:id="@+id/nav_coupans"
            android:icon="@drawable/ic_gift"
            android:title="@string/coupans" />

        <item
            android:icon="@drawable/ic_notifications"
            android:title="@string/title_notifications" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>







